--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.1 2003-07-19 16:07:10 karsten Exp $
+   $Id: build.xml,v 1.2 2003-07-19 20:52:36 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -74,7 +74,7 @@
 	<target name="compile-1.3" depends="prepare"
 	        description="Compiles all 1.3 sources." >
 		<javac 
-			srcdir     ="${src.share.dir}:${src.motif.dir}:${src.plastic.dir}:${src.windows.dir}" 
+			srcdir     ="${src.share.dir}:${src.motif.dir}:${src.plastic.dir}:${src.windows.dir}"
 			destdir    ="${build.1.3.dir}"
         	encoding   ="${build.encoding}"
         	executable ="${build.compile.executable.1.3}"
@@ -149,97 +149,67 @@
 	</target>
 	
     <!-- ***************************************************************** -->
-	<target name="jar-all" depends="compile"
+	<target name="manifest" depends="prepare"
+	        description="Creates the manifest file." >
+        <manifest file="${build.manifest}">
+            <attribute name ="Built-By" 
+                       value="${user.name}"/>
+                       
+            <section name="com/jgoodies/plaf" >
+                <attribute name ="Specification-Title"
+                           value="${Name}" />
+                <attribute name ="Specification-Version"
+                           value="${spec.version}" />
+                <attribute name ="Specification-Vendor"
+                           value="${vendor}" />
+         		<attribute name ="Implementation-Title"
+                           value="com.jgoodies.plaf" />
+         		<attribute name ="Implementation-Version"
+                           value="${impl.version} ${DATE}" />
+                <attribute name ="Implementation-Vendor"
+                           value="${vendor}" />
+            </section>
+       </manifest>
+	</target>
+	
+    <!-- ***************************************************************** -->
+	<target name="jar-all" depends="compile, manifest"
 	        description="Creates the library jar with all JGoodies l&amp;fs." >
 		<jar 
-			destfile="${build.all.jar}" >
+			destfile="${build.all.jar}" 
+			manifest="${build.manifest}" >
 			<fileset dir="${build.1.3.dir}" />
 			<fileset dir="${build.1.4.dir}" />
-            <manifest>
-                <attribute name ="Built-By" 
-                           value="${user.name}"/>
-                           
-                <section name="com/jgoodies/plaf" >
-                    <attribute name ="Specification-Title"
-                               value="${Name}" />
-                    <attribute name ="Specification-Version"
-                               value="${spec.version}" />
-                    <attribute name ="Specification-Vendor"
-                               value="${vendor}" />
-             		<attribute name ="Implementation-Title"
-                               value="com.jgoodies.plaf" />
-             		<attribute name ="Implementation-Version"
-                               value="${impl.version} ${DATE}" />
-                    <attribute name ="Implementation-Vendor"
-                               value="${vendor}" />
-                </section>
-           </manifest>
 		</jar>
 	</target>
 	
     <!-- ***************************************************************** -->
-	<target name="jar-plastic" depends="compile"
+	<target name="jar-plastic" depends="compile, manifest"
 	        description="Creates the library jar for the Plastic l&amp;fs." >
 		<jar 
-			destfile="${build.plastic.jar}" >
+			destfile="${build.plastic.jar}" 
+			manifest="${build.manifest}" >
 			<fileset dir="${build.1.3.dir}" 
 			         excludes="com/jgoodies/plaf/motif/**/*,
 					 	       com/jgoodies/plaf/windows/**/*"  />
 			<fileset dir="${build.1.4.dir}"  
                      excludes="com/jgoodies/plaf/motif/**/*,
 					 	       com/jgoodies/plaf/windows/**/*"   />
-            <manifest>
-                <attribute name ="Built-By" 
-                           value="${user.name}"/>
-                           
-                <section name="com/jgoodies/plaf" >
-                    <attribute name ="Specification-Title"
-                               value="${Name}" />
-                    <attribute name ="Specification-Version"
-                               value="${spec.version}" />
-                    <attribute name ="Specification-Vendor"
-                               value="${vendor}" />
-             		<attribute name ="Implementation-Title"
-                               value="com.jgoodies.plaf" />
-             		<attribute name ="Implementation-Version"
-                               value="${impl.version} ${DATE}" />
-                    <attribute name ="Implementation-Vendor"
-                               value="${vendor}" />
-                </section>
-           </manifest>
 		</jar>
 	</target>
 	
     <!-- ***************************************************************** -->
-	<target name="jar-windows" depends="compile"
+	<target name="jar-windows" depends="compile, manifest"
 	        description="Creates the library jar for the windows l&amp;f." >
 		<jar 
-			destfile="${build.windows.jar}" >
+			destfile="${build.windows.jar}" 
+			manifest="${build.manifest}" >
 			<fileset dir="${build.1.3.dir}" 
 			         excludes="com/jgoodies/plaf/motif/**/*,
 					 	       com/jgoodies/plaf/plastic/**/*"  />
 			<fileset dir="${build.1.4.dir}"   
 			         excludes="com/jgoodies/plaf/motif/**/*,
 					 	       com/jgoodies/plaf/plastic/**/*"  />
-            <manifest>
-                <attribute name ="Built-By" 
-                           value="${user.name}"/>
-                           
-                <section name="com/jgoodies/plaf" >
-                    <attribute name ="Specification-Title"
-                               value="${Name}" />
-                    <attribute name ="Specification-Version"
-                               value="${spec.version}" />
-                    <attribute name ="Specification-Vendor"
-                               value="${vendor}" />
-             		<attribute name ="Implementation-Title"
-                               value="com.jgoodies.plaf" />
-             		<attribute name ="Implementation-Version"
-                               value="${impl.version} ${DATE}" />
-                    <attribute name ="Implementation-Vendor"
-                               value="${vendor}" />
-                </section>
-           </manifest>
 		</jar>
 	</target>
 	
