--- a/default.properties
+++ b/default.properties
@@ -12,7 +12,7 @@ name=looks
 vendor=JGoodies Karsten Lentzsch
 spec.version=1.1
 impl.version=1.1.2
-dist.version=1_1_2
+dist.version=20030719
 copyright.date=2003
 copyright.message=Copyright &#169; ${copyright.date} ${vendor}. All Rights Reserved. 
 
@@ -20,7 +20,7 @@ jar.all.name    =looks
 jar.plastic.name=plastic
 jar.windows.name=looks-win
 
-top.dir=.
+top.dir=${basedir}
 
 # Source Properties -------------------------------------------
 src.dir          = ${top.dir}/src
@@ -52,6 +52,7 @@ build.dir          = ${top.dir}/build
 build.classes.dir  = ${build.dir}/classes
 build.1.3.dir      = ${build.classes.dir}/1.3
 build.1.4.dir      = ${build.classes.dir}/1.4
+build.manifest     = ${build.dir}/manifest.mf
 build.docs.dir     = ${build.dir}/docs
 build.javadocs.dir = ${build.docs.dir}/api
 
