--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.2 2003-07-19 20:52:36 karsten Exp $
+   $Id: build.xml,v 1.3 2003-08-01 09:44:54 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -35,6 +35,12 @@
     <path id="classpath.1.3">
         <pathelement location="${build.1.3.dir}" 	/> 
     </path>
+
+    <path id="classpath.demo">
+        <pathelement location="${build.1.3.dir}" 	/> 
+        <pathelement location="${build.1.4.dir}" 	/> 
+        <pathelement location="${lib.forms.jar}" 	/> 
+    </path>
     
   
   
@@ -61,32 +67,36 @@
         
 		<mkdir dir="${build.1.3.dir}"	  />
 		<mkdir dir="${build.1.4.dir}"     />
+		<mkdir dir="${build.demo.dir}"    />
+		<mkdir dir="${build.tiny.dir}"    />
 	</target>
 	
 	
     <!-- ***************************************************************** -->
     <!-- C O M P I L A T I O N                                             -->
     <!-- ***************************************************************** -->
-	<target name="compile" depends="compile-1.3, compile-1.4" 
+	<target name="compile" 
+			depends="compile-1.3, compile-1.4, compile-demo, compile-tiny" 
 	        description="Compiles all sources." />
 	        
     <!-- ***************************************************************** -->
 	<target name="compile-1.3" depends="prepare"
 	        description="Compiles all 1.3 sources." >
 		<javac 
-			srcdir     ="${src.share.dir}:${src.motif.dir}:${src.plastic.dir}:${src.windows.dir}"
-			destdir    ="${build.1.3.dir}"
-        	encoding   ="${build.encoding}"
-        	executable ="${build.compile.executable.1.3}"
-        	fork       ="${build.compile.fork.1.3}"
-			debug      ="${build.compile.debug}"
-			depend     ="${build.compile.depend}"
-			deprecation="${build.compile.deprecation}"
-			nowarn     ="${build.compile.nowarn}" 
-			optimize   ="${build.compile.optimize}"
-			target     ="${build.compile.target}"
-			verbose    ="${build.compile.verbose}" >
-		</javac>
+			srcdir       ="${src.share.dir};${src.motif.dir};${src.plastic.dir};${src.windows.dir}"
+			destdir      ="${build.1.3.dir}"
+        	encoding     ="${build.encoding}"
+        	executable   ="${build.compile.executable}"
+        	fork         ="${build.compile.fork}"
+			debug        ="${build.compile.debug}"
+			depend       ="${build.compile.depend}"
+			deprecation  ="${build.compile.deprecation}"
+			nowarn       ="${build.compile.nowarn}" 
+			optimize     ="${build.compile.optimize}"
+			target       ="${build.compile.target}"
+			verbose      ="${build.compile.verbose}"
+			bootclasspath="${build.boot.classpath}" />
+
 		<copy toDir="${build.1.3.dir}" >
 			<fileset dir="${src.motif.dir}" 
 					 includes="com/jgoodies/plaf/motif/icons/*" />
@@ -101,22 +111,62 @@
 	<target name="compile-1.4" depends="compile-1.3"
 	        description="Compiles the 1.4 sources." >
 		<javac 
-			srcdir     ="${src.1.4.dir}" 
-			destdir    ="${build.1.4.dir}"
-        	encoding   ="${build.encoding}"
-        	executable ="${build.compile.executable.1.4}"
-        	fork       ="${build.compile.fork.1.4}"
-			debug      ="${build.compile.debug}"
-			depend     ="${build.compile.depend}"
-			deprecation="${build.compile.deprecation}"
-			nowarn     ="${build.compile.nowarn}" 
-			optimize   ="${build.compile.optimize}"
-			target     ="${build.compile.target}"
-			verbose    ="${build.compile.verbose}" >
-		    <classpath refid="classpath.1.3" />
-		</javac>
+			srcdir       ="${src.1.4.dir}" 
+			destdir      ="${build.1.4.dir}"
+        	encoding     ="${build.encoding}"
+        	executable   ="${build.compile.executable}"
+        	fork         ="${build.compile.fork}"
+			debug        ="${build.compile.debug}"
+			depend       ="${build.compile.depend}"
+			deprecation  ="${build.compile.deprecation}"
+			nowarn       ="${build.compile.nowarn}" 
+			optimize     ="${build.compile.optimize}"
+			target       ="${build.compile.target}"
+			verbose      ="${build.compile.verbose}"
+		    classpathref ="classpath.1.3" />
 	</target>
 
+    <!-- ***************************************************************** -->
+	<target name="compile-demo" depends="compile-1.4"
+	        description="Compiles the demo sources." >
+		<javac 
+			srcdir       ="${src.demo.dir}" 
+			destdir      ="${build.demo.dir}"
+        	encoding     ="${build.encoding}"
+        	executable   ="${build.compile.executable}"
+        	fork         ="${build.compile.fork}"
+			debug        ="${build.compile.debug}"
+			depend       ="${build.compile.depend}"
+			deprecation  ="${build.compile.deprecation}"
+			nowarn       ="${build.compile.nowarn}" 
+			optimize     ="${build.compile.optimize}"
+			target       ="${build.compile.target}"
+			verbose      ="${build.compile.verbose}"
+			bootclasspath="${build.boot.classpath}" 
+		    classpathref ="classpath.demo" />
+	</target>
+
+    <!-- ***************************************************************** -->
+	<target name="compile-tiny" depends="compile-demo"
+	        description="Compiles the tiny sources." >
+		<javac 
+			srcdir       ="${src.tiny.dir}" 
+			destdir      ="${build.tiny.dir}"
+        	encoding     ="${build.encoding}"
+        	executable   ="${build.compile.executable}"
+        	fork         ="${build.compile.fork}"
+			debug        ="${build.compile.debug}"
+			depend       ="${build.compile.depend}"
+			deprecation  ="${build.compile.deprecation}"
+			nowarn       ="${build.compile.nowarn}" 
+			optimize     ="${build.compile.optimize}"
+			target       ="${build.compile.target}"
+			verbose      ="${build.compile.verbose}"
+			bootclasspath="${build.boot.classpath}" 
+		    classpathref ="classpath.1.3" />
+	</target>
+
+	
 	
     <!-- ***************************************************************** -->
     <!-- J A V A D O C                                                     -->
@@ -144,8 +194,9 @@
     <!-- ***************************************************************** -->
     <!-- J A R                                       				       -->
     <!-- ***************************************************************** -->
-	<target name="jar" depends="jar-all, jar-plastic, jar-windows"
-	        description="Creates all library jars." >
+	<target name="jar" 
+			depends="jar-all, jar-plastic, jar-windows, jar-demo, jar-tiny"
+	        description="Creates library and example jars." >
 	</target>
 	
     <!-- ***************************************************************** -->
@@ -163,7 +214,7 @@
                 <attribute name ="Specification-Vendor"
                            value="${vendor}" />
          		<attribute name ="Implementation-Title"
-                           value="com.jgoodies.plaf" />
+                           value="${implementation.title}" />
          		<attribute name ="Implementation-Version"
                            value="${impl.version} ${DATE}" />
                 <attribute name ="Implementation-Vendor"
@@ -213,6 +264,42 @@
 		</jar>
 	</target>
 	
+    <!-- ***************************************************************** -->
+	<target name="jar-demo" depends="jar-plastic"
+	        description="Creates the demo jar." >
+		<jar 
+			destfile="${build.demo.jar}" >
+			<fileset    dir="${build.demo.dir}"    />
+			<fileset    dir="${src.demo.dir}" 
+			            includes="images/**/*"     />
+			<manifest>
+                <attribute name ="Built-By" 
+                           value="${user.name}"/>
+                <attribute name ="Main-Class" 
+                           value="com.jgoodies.looks.demo.DemoFrame"/>
+                <attribute name ="Class-Path" 
+                           value="lib/${lib.forms.name} ../${jar.all.name}.jar"/>
+            </manifest>		
+        </jar>
+	</target>
+	
+    <!-- ***************************************************************** -->
+	<target name="jar-tiny" depends="jar-plastic"
+	        description="Creates the tiny jar." >
+		<jar 
+			destfile="${build.tiny.jar}" >
+			<fileset    dir="${build.tiny.dir}" />
+			<manifest>
+                <attribute name ="Built-By" 
+                           value="${user.name}"/>
+                <attribute name ="Main-Class" 
+                           value="Tiny"/>
+                <attribute name ="Class-Path" 
+                           value="../${jar.all.name}.jar"/>
+            </manifest>		
+        </jar>
+	</target>
+	
 	
     <!-- ***************************************************************** -->
     <!-- P A C K A G E                                                     -->
@@ -224,26 +311,47 @@
 		
 		<!-- Copy the documentation. -->
 		<copy todir="${dist.docs.dir}" >
+			<fileset dir="${docs.dir}"       />
 		    <fileset dir="${build.docs.dir}" />
+		</copy>
+		
+		<!-- Copy the examples. -->
+		<copy todir="${dist.examples.dir}" file="${build.demo.jar}" />
+		<copy todir="${dist.examples.dir}" file="${build.tiny.jar}" />
+		
+		<!-- Copy the libraries. -->
+		<copy todir="${dist.lib.dir}" >
+		    <fileset dir="${lib.dir}" />
 		</copy>
 		
 		<!-- Copy the source directories. -->
 		<copy todir="${dist.src.dir}" >
-		    <fileset dir="${src.dir}" />
+		    <fileset dir="${src.dir}" 
+		             includes="examples/**/*, photoshop/*" />
 		</copy>
 		
 		<!-- Copy the distribution files. -->
 		<copy todir="${dist.dir}" >
 			<fileset dir="${top.dir}" 
-				     includes="*.txt, *.xml, *.properties" />
+				     includes="*.txt, *.html, *.xml, *.properties" 
+				     excludes="todo.txt" />
 		</copy>
-		<copy todir="${dist.dir}" file="${docs.dir}/quickstart.txt" />
 
 		<!-- Copy the jar files. -->
 		<copy tofile="${dist.all.jar}"     file="${build.all.jar}" />
 		<copy tofile="${dist.plastic.jar}" file="${build.plastic.jar}" />
 		<copy tofile="${dist.windows.jar}" file="${build.windows.jar}" />
 		
+		<!-- Create a source zip for the libarary jar. -->
+	    <zip 
+	    	destfile="${dist.all.src.zip}">
+			<fileset dir="${src.share.dir}"   />
+			<fileset dir="${src.motif.dir}"   />
+			<fileset dir="${src.plastic.dir}" />
+			<fileset dir="${src.windows.dir}" />
+			<fileset dir="${src.1.4.dir}"     />
+	    </zip>    
+	    
 	</target>
 
     <!-- ***************************************************************** -->
