Added service descriptors for automatic L&f detection to all JARs.

--- a/default.properties
+++ b/default.properties
@@ -11,8 +11,8 @@ Name=JGoodies Looks
 name=looks
 vendor=JGoodies Karsten Lentzsch
 spec.version=1.1
-impl.version=1.1.2
-dist.version=1_1_2-20030807
+impl.version=1.1.3
+dist.version=1_1_3-20030814
 copyright.date=2003
 copyright.message=Copyright &#169; ${copyright.date} ${vendor}. All Rights Reserved. 
 implementation.title=com.jgoodies.plaf
@@ -34,6 +34,8 @@ src.examples.dir = ${src.dir}/examples
 src.demo.dir     = ${src.examples.dir}/demo
 src.tiny.dir     = ${src.examples.dir}/tiny
 docs.dir         = ${top.dir}/docs
+
+descriptors.dir  = ${top.dir}/conf/service descriptors
 
 
 # Library Properties ------------------------------------------
