--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.3 2003-08-01 09:44:54 karsten Exp $
+   $Id: build.xml,v 1.4 2003-08-14 11:26:27 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -226,17 +226,22 @@
     <!-- ***************************************************************** -->
 	<target name="jar-all" depends="compile, manifest"
 	        description="Creates the library jar with all JGoodies l&amp;fs." >
+
 		<jar 
 			destfile="${build.all.jar}" 
 			manifest="${build.manifest}" >
 			<fileset dir="${build.1.3.dir}" />
 			<fileset dir="${build.1.4.dir}" />
+			<zipfileset dir="${descriptors.dir}"
+					    includes="all.txt"
+			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
 		</jar>
 	</target>
 	
     <!-- ***************************************************************** -->
 	<target name="jar-plastic" depends="compile, manifest"
 	        description="Creates the library jar for the Plastic l&amp;fs." >
+
 		<jar 
 			destfile="${build.plastic.jar}" 
 			manifest="${build.manifest}" >
@@ -246,6 +251,9 @@
 			<fileset dir="${build.1.4.dir}"  
                      excludes="com/jgoodies/plaf/motif/**/*,
 					 	       com/jgoodies/plaf/windows/**/*"   />
+			<zipfileset dir="${descriptors.dir}"
+					    includes="plastic.txt"
+			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
 		</jar>
 	</target>
 	
@@ -261,6 +269,9 @@
 			<fileset dir="${build.1.4.dir}"   
 			         excludes="com/jgoodies/plaf/motif/**/*,
 					 	       com/jgoodies/plaf/plastic/**/*"  />
+			<zipfileset dir="${descriptors.dir}"
+					    includes="windows.txt"
+			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
 		</jar>
 	</target>
 	
