--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.4 2003-08-14 11:26:27 karsten Exp $
+   $Id: build.xml,v 1.5 2003-08-19 16:40:19 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -360,7 +360,8 @@
 			<fileset dir="${src.motif.dir}"   />
 			<fileset dir="${src.plastic.dir}" />
 			<fileset dir="${src.windows.dir}" />
-			<fileset dir="${src.1.4.dir}"     />
+			<fileset dir="${src.1.4.dir}"   
+			         excludes="**/*.class"    />
 	    </zip>    
 	    
 	</target>
