--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.5 2003-08-19 16:40:19 karsten Exp $
+   $Id: build.xml,v 1.6 2003-10-02 13:32:03 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -289,7 +289,7 @@
                 <attribute name ="Main-Class" 
                            value="com.jgoodies.looks.demo.DemoFrame"/>
                 <attribute name ="Class-Path" 
-                           value="lib/${lib.forms.name} ../${jar.all.name}.jar"/>
+                           value="lib/${lib.forms.name} ../${dist.all.name}"/>
             </manifest>		
         </jar>
 	</target>
@@ -306,7 +306,7 @@
                 <attribute name ="Main-Class" 
                            value="Tiny"/>
                 <attribute name ="Class-Path" 
-                           value="../${jar.all.name}.jar"/>
+                           value="../${dist.all.name}"/>
             </manifest>		
         </jar>
 	</target>
@@ -320,11 +320,13 @@
 	
 		<mkdir dir="${dist.dir}" />
 		
-		<!-- Copy the documentation. -->
+		<!-- Compile the documentation. -->
 		<copy todir="${dist.docs.dir}" >
 			<fileset dir="${docs.dir}"       />
-		    <fileset dir="${build.docs.dir}" />
 		</copy>
+		<move todir="${dist.docs.dir}" >
+		    <fileset dir="${build.docs.dir}" />
+		</move>
 		
 		<!-- Copy the examples. -->
 		<copy todir="${dist.examples.dir}" file="${build.demo.jar}" />
