--- a/default.properties
+++ b/default.properties
@@ -12,7 +12,7 @@ name=looks
 vendor=JGoodies Karsten Lentzsch
 spec.version=1.1
 impl.version=1.1.3
-dist.version=1_1_3-20030819
+dist.version=1_1_3-20031002
 copyright.date=2003
 copyright.message=Copyright &#169; ${copyright.date} ${vendor}. All Rights Reserved. 
 implementation.title=com.jgoodies.plaf
@@ -40,7 +40,7 @@ descriptors.dir  = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.0.1.jar
+lib.forms.name = forms-1.0.2.jar
 lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 
 
@@ -89,7 +89,8 @@ dist.examples.dir= ${dist.dir}/examples
 dist.lib.dir     = ${dist.examples.dir}/lib
 dist.src.dir     = ${dist.dir}/src
 
-dist.all.jar     = ${dist.dir}/${jar.all.name}-${impl.version}.jar
+dist.all.name    = ${jar.all.name}-${impl.version}.jar
+dist.all.jar     = ${dist.dir}/${dist.all.name}
 dist.all.src.zip = ${dist.dir}/${jar.all.name}-${impl.version}-src.zip
 dist.plastic.jar = ${dist.dir}/${jar.plastic.name}-${impl.version}.jar
 dist.windows.jar = ${dist.dir}/${jar.windows.name}-${impl.version}.jar
