--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.6 2003-10-02 13:32:03 karsten Exp $
+   $Id: build.xml,v 1.7 2003-11-17 14:51:26 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -32,13 +32,12 @@
     <!-- ***************************************************************** -->
     <!-- P A T H S                                                         -->
     <!-- ***************************************************************** -->
-    <path id="classpath.1.3">
-        <pathelement location="${build.1.3.dir}" 	/> 
+    <path id="classpath.lib">
+        <pathelement location="${build.main.dir}" 	/> 
     </path>
 
     <path id="classpath.demo">
-        <pathelement location="${build.1.3.dir}" 	/> 
-        <pathelement location="${build.1.4.dir}" 	/> 
+        <pathelement location="${build.main.dir}" 	/> 
         <pathelement location="${lib.forms.jar}" 	/> 
     </path>
     
@@ -65,8 +64,7 @@
            <format property="DATE" pattern="yyyy-MM-dd hh:mm:ss" />
         </tstamp>
         
-		<mkdir dir="${build.1.3.dir}"	  />
-		<mkdir dir="${build.1.4.dir}"     />
+		<mkdir dir="${build.main.dir}"	  />
 		<mkdir dir="${build.demo.dir}"    />
 		<mkdir dir="${build.tiny.dir}"    />
 	</target>
@@ -76,15 +74,15 @@
     <!-- C O M P I L A T I O N                                             -->
     <!-- ***************************************************************** -->
 	<target name="compile" 
-			depends="compile-1.3, compile-1.4, compile-demo, compile-tiny" 
+			depends="compile-main, compile-demo, compile-tiny" 
 	        description="Compiles all sources." />
 	        
     <!-- ***************************************************************** -->
-	<target name="compile-1.3" depends="prepare"
-	        description="Compiles all 1.3 sources." >
+	<target name="compile-main" depends="prepare"
+	        description="Compiles all library sources." >
 		<javac 
-			srcdir       ="${src.share.dir};${src.motif.dir};${src.plastic.dir};${src.windows.dir}"
-			destdir      ="${build.1.3.dir}"
+			srcdir       ="${src.share.dir};${src.plastic.dir};${src.windows.dir}"
+			destdir      ="${build.main.dir}"
         	encoding     ="${build.encoding}"
         	executable   ="${build.compile.executable}"
         	fork         ="${build.compile.fork}"
@@ -97,9 +95,7 @@
 			verbose      ="${build.compile.verbose}"
 			bootclasspath="${build.boot.classpath}" />
 
-		<copy toDir="${build.1.3.dir}" >
-			<fileset dir="${src.motif.dir}" 
-					 includes="com/jgoodies/plaf/motif/icons/*" />
+		<copy toDir="${build.main.dir}" >
 			<fileset dir="${src.plastic.dir}" 
 					 includes="com/jgoodies/plaf/plastic/icons/*" />
 			<fileset dir="${src.windows.dir}" 
@@ -108,26 +104,7 @@
 	</target>
 	
     <!-- ***************************************************************** -->
-	<target name="compile-1.4" depends="compile-1.3"
-	        description="Compiles the 1.4 sources." >
-		<javac 
-			srcdir       ="${src.1.4.dir}" 
-			destdir      ="${build.1.4.dir}"
-        	encoding     ="${build.encoding}"
-        	executable   ="${build.compile.executable}"
-        	fork         ="${build.compile.fork}"
-			debug        ="${build.compile.debug}"
-			depend       ="${build.compile.depend}"
-			deprecation  ="${build.compile.deprecation}"
-			nowarn       ="${build.compile.nowarn}" 
-			optimize     ="${build.compile.optimize}"
-			target       ="${build.compile.target}"
-			verbose      ="${build.compile.verbose}"
-		    classpathref ="classpath.1.3" />
-	</target>
-
-    <!-- ***************************************************************** -->
-	<target name="compile-demo" depends="compile-1.4"
+	<target name="compile-demo" depends="compile-main"
 	        description="Compiles the demo sources." >
 		<javac 
 			srcdir       ="${src.demo.dir}" 
@@ -163,7 +140,7 @@
 			target       ="${build.compile.target}"
 			verbose      ="${build.compile.verbose}"
 			bootclasspath="${build.boot.classpath}" 
-		    classpathref ="classpath.1.3" />
+		    classpathref ="classpath.demo" />
 	</target>
 
 	
@@ -175,7 +152,7 @@
             description="Creates the API documentation using JavaDoc." >
 		<mkdir dir="${build.javadocs.dir}"	/>
         <javadoc 
-        	sourcepath="${src.share.dir}:${src.motif.dir}:${src.plastic.dir}:${src.windows.dir}:${src.1.4.dir}"
+        	sourcepath="${src.share.dir}:${src.plastic.dir}:${src.windows.dir}"
             packagenames="${javadoc.packages}"
         	destdir="${build.javadocs.dir}"
         	encoding="${build.encoding}"
@@ -230,8 +207,7 @@
 		<jar 
 			destfile="${build.all.jar}" 
 			manifest="${build.manifest}" >
-			<fileset dir="${build.1.3.dir}" />
-			<fileset dir="${build.1.4.dir}" />
+			<fileset dir="${build.main.dir}" />
 			<zipfileset dir="${descriptors.dir}"
 					    includes="all.txt"
 			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
@@ -245,12 +221,8 @@
 		<jar 
 			destfile="${build.plastic.jar}" 
 			manifest="${build.manifest}" >
-			<fileset dir="${build.1.3.dir}" 
-			         excludes="com/jgoodies/plaf/motif/**/*,
-					 	       com/jgoodies/plaf/windows/**/*"  />
-			<fileset dir="${build.1.4.dir}"  
-                     excludes="com/jgoodies/plaf/motif/**/*,
-					 	       com/jgoodies/plaf/windows/**/*"   />
+			<fileset dir="${build.main.dir}" 
+			         excludes="com/jgoodies/plaf/windows/**/*"  />
 			<zipfileset dir="${descriptors.dir}"
 					    includes="plastic.txt"
 			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
@@ -263,12 +235,8 @@
 		<jar 
 			destfile="${build.windows.jar}" 
 			manifest="${build.manifest}" >
-			<fileset dir="${build.1.3.dir}" 
-			         excludes="com/jgoodies/plaf/motif/**/*,
-					 	       com/jgoodies/plaf/plastic/**/*"  />
-			<fileset dir="${build.1.4.dir}"   
-			         excludes="com/jgoodies/plaf/motif/**/*,
-					 	       com/jgoodies/plaf/plastic/**/*"  />
+			<fileset dir="${build.main.dir}" 
+			         excludes="com/jgoodies/plaf/plastic/**/*"  />
 			<zipfileset dir="${descriptors.dir}"
 					    includes="windows.txt"
 			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
@@ -359,11 +327,8 @@
 	    <zip 
 	    	destfile="${dist.all.src.zip}">
 			<fileset dir="${src.share.dir}"   />
-			<fileset dir="${src.motif.dir}"   />
 			<fileset dir="${src.plastic.dir}" />
 			<fileset dir="${src.windows.dir}" />
-			<fileset dir="${src.1.4.dir}"   
-			         excludes="**/*.class"    />
 	    </zip>    
 	    
 	</target>
