--- a/default.properties
+++ b/default.properties
@@ -10,9 +10,9 @@
 Name=JGoodies Looks
 name=looks
 vendor=JGoodies Karsten Lentzsch
-spec.version=1.1
-impl.version=1.1.3
-dist.version=1_1_3-20031114
+spec.version=1.2
+impl.version=1.2pre1
+dist.version=1_2pre1-20031116
 copyright.date=2003
 copyright.message=Copyright &#169; ${copyright.date} ${vendor}. All Rights Reserved. 
 implementation.title=com.jgoodies.plaf
@@ -26,10 +26,8 @@ top.dir=${basedir}
 # Source Properties -------------------------------------------
 src.dir          = ${top.dir}/src
 src.share.dir    = ${src.dir}/share
-src.motif.dir    = ${src.dir}/motif
 src.plastic.dir  = ${src.dir}/plastic
 src.windows.dir  = ${src.dir}/windows
-src.1.4.dir      = ${src.dir}/1.4
 src.examples.dir = ${src.dir}/examples
 src.demo.dir     = ${src.examples.dir}/demo
 src.tiny.dir     = ${src.examples.dir}/tiny
@@ -60,8 +58,7 @@ build.encoding=ISO-8859-1
 
 build.dir          = ${top.dir}/build
 build.classes.dir  = ${build.dir}/classes
-build.1.3.dir      = ${build.classes.dir}/1.3
-build.1.4.dir      = ${build.classes.dir}/1.4
+build.main.dir     = ${build.classes.dir}/main
 build.manifest     = ${build.dir}/manifest.mf
 build.examples.dir = ${build.classes.dir}/examples
 build.demo.dir     = ${build.classes.dir}/demo
