--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.7 2003-11-17 14:51:26 karsten Exp $
+   $Id: build.xml,v 1.8 2004-01-04 20:10:43 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -97,9 +97,9 @@
 
 		<copy toDir="${build.main.dir}" >
 			<fileset dir="${src.plastic.dir}" 
-					 includes="com/jgoodies/plaf/plastic/icons/*" />
+					 includes="com/jgoodies/plaf/plastic/icons/**/*" />
 			<fileset dir="${src.windows.dir}" 
-					 includes="com/jgoodies/plaf/windows/icons/*" />
+					 includes="com/jgoodies/plaf/windows/icons/**/*" />
 		</copy>
 	</target>
 	
