--- a/default.properties
+++ b/default.properties
@@ -9,12 +9,12 @@
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
 name=looks
-vendor=JGoodies Karsten Lentzsch
 spec.version=1.2
-impl.version=1.2pre1
-dist.version=1_2pre1-20040109
-copyright.date=2003
-copyright.message=Copyright &#169; ${copyright.date} ${vendor}. All Rights Reserved. 
+impl.version=1.2.0
+dist.version=1_2.0-20040121
+copyright.date=2003, 2004
+copyright.owner=JGoodies Karsten Lentzsch
+copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
 implementation.title=com.jgoodies.plaf
 
 jar.all.name    =looks
