Refreshed for the 1.2.1 snapshot

--- a/default.properties
+++ b/default.properties
@@ -10,9 +10,9 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.2
-impl.version=1.2.0
-dist.version=1_2.0-20040121
-copyright.date=2003, 2004
+impl.version=1.2.1-snapshot
+dist.version=1_2_1-20040202
+copyright.date=2001-2004
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
 implementation.title=com.jgoodies.plaf
