--- a/default.properties
+++ b/default.properties
@@ -9,9 +9,9 @@
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
 name=looks
-spec.version=1.2
-impl.version=1.2.2
-dist.version=1_2_2-20040528
+spec.version=1.3
+impl.version=1.3.0-20040604
+dist.version=1_3_0-20040604
 copyright.date=2001-2004
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
