--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3.0-20040604
-dist.version=1_3_0-20040604
+impl.version=1.3pre-20040618
+dist.version=1_3-preview-20040618
 copyright.date=2001-2004
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
