--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3pre-20040618
-dist.version=1_3-preview-20040618
+impl.version=1.3-snapshot
+dist.version=1_3-20040618
 copyright.date=2001-2004
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
@@ -38,7 +38,7 @@ descriptors.dir  = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.0.4.jar
+lib.forms.name = forms-1.0.5-snapshot.jar
 lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 
 
