--- a/default.properties
+++ b/default.properties
@@ -11,7 +11,7 @@ Name=JGoodies Looks
 name=looks
 spec.version=1.3
 impl.version=1.3-snapshot
-dist.version=1_3-20040830
+dist.version=1_3-20040914
 spec.vendor=JGoodies Karsten Lentzsch
 impl.vendor=JGoodies Karsten Lentzsch
 copyright.date=2001-2004
@@ -47,6 +47,7 @@ lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 # JavaDoc Properties ------------------------------------------
 javadoc.link=http://java.sun.com/j2se/1.4/docs/api/
 javadoc.packages=com.jgoodies.*
+javadoc.overview=${src.main.dir}/overview.html
 
 
 # Build Properties --------------------------------------------
