--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.13 2004-09-05 09:34:01 karsten Exp $
+   $Id: build.xml,v 1.14 2004-10-06 09:36:00 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -18,7 +18,7 @@
      
 -->
 
-<project default="jar" basedir=".">
+<project default="jar" basedir="." name="JGoodies Looks" >
 
     <!-- ***************************************************************** -->
     <!-- Give users a chance to override build properties.                 -->
