--- a/default.properties
+++ b/default.properties
@@ -11,7 +11,7 @@ Name=JGoodies Looks
 name=looks
 spec.version=1.3
 impl.version=1.3-snapshot
-dist.version=1_3-20040914
+dist.version=1_3-20041010
 spec.vendor=JGoodies Karsten Lentzsch
 impl.vendor=JGoodies Karsten Lentzsch
 copyright.date=2001-2004
@@ -40,14 +40,14 @@ descriptors.dir  = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.0.5-snapshot.jar
+lib.forms.name = forms-1.0.5.jar
 lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 
 
 # JavaDoc Properties ------------------------------------------
 javadoc.link=http://java.sun.com/j2se/1.4/docs/api/
 javadoc.packages=com.jgoodies.*
-javadoc.overview=${src.main.dir}/overview.html
+javadoc.overview=${src.share.dir}/overview.html
 
 
 # Build Properties --------------------------------------------
