--- a/default.properties
+++ b/default.properties
@@ -10,11 +10,11 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3-snapshot
-dist.version=1_3-20041010
+impl.version=1.3b1
+dist.version=1_3_b1-20050106
 spec.vendor=JGoodies Karsten Lentzsch
 impl.vendor=JGoodies Karsten Lentzsch
-copyright.date=2001-2004
+copyright.date=2001-2005
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
 implementation.title=com.jgoodies.plaf
