Fixed broken JAR manifest package section name (missing slash) by removing the section name from the manifest.

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.15 2004-10-10 20:39:18 karsten Exp $
+   $Id: build.xml,v 1.16 2005-02-16 20:36:34 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -185,21 +185,18 @@
         <manifest file="${build.manifest}">
             <attribute name ="Built-By" 
                        value="${user.name}"/>
-                       
-            <section name="com/jgoodies/looks" >
-                <attribute name ="Specification-Title"
-                           value="${Name}" />
-                <attribute name ="Specification-Version"
-                           value="${spec.version}" />
-                <attribute name ="Specification-Vendor"
-                           value="${spec.vendor}" />
-         		<attribute name ="Implementation-Title"
-                           value="${implementation.title}" />
-         		<attribute name ="Implementation-Version"
-                           value="${impl.version} ${DATE}" />
-                <attribute name ="Implementation-Vendor"
-                           value="${impl.vendor}" />
-            </section>
+            <attribute name ="Specification-Title"
+                       value="${spec.title}" />
+            <attribute name ="Specification-Version"
+                       value="${spec.version}" />
+            <attribute name ="Specification-Vendor"
+                       value="${spec.vendor}" />
+     		<attribute name ="Implementation-Title"
+                       value="${impl.title}" />
+     		<attribute name ="Implementation-Version"
+                       value="${impl.version} ${DATE}" />
+            <attribute name ="Implementation-Vendor"
+                       value="${impl.vendor}" />
        </manifest>
 	</target>
 	
