--- a/default.properties
+++ b/default.properties
@@ -10,14 +10,15 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3b1
-dist.version=1_3_b1-20050108
+impl.version=1.3b2
+dist.version=1_3_b2-20050216
+spec.title=${Name} API Specification
+impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
 impl.vendor=JGoodies Karsten Lentzsch
 copyright.date=2001-2005
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
-implementation.title=com.jgoodies.plaf
 
 jar.all.name    =looks
 jar.plastic.name=plastic
