Refreshed for the recent build.

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3b2
-dist.version=1_3_b2-20050216
+impl.version=1.3rc
+dist.version=1_3_rc-20050308
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
