--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3.0
-dist.version=1_3_0-20050316
+impl.version=1.3.1
+dist.version=1_3_1-snapshot-20050324
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -34,6 +34,7 @@ src.windows.dir  = ${src.dir}/windows
 src.examples.dir = ${src.dir}/examples
 src.demo.dir     = ${src.examples.dir}/demo
 src.tiny.dir     = ${src.examples.dir}/tiny
+src.test.dir     = ${src.dir}/test
 docs.dir         = ${top.dir}/docs
 
 descriptors.dir  = ${top.dir}/conf/service descriptors
@@ -67,8 +68,10 @@ build.manifest     = ${build.dir}/manifest.mf
 build.examples.dir = ${build.classes.dir}/examples
 build.demo.dir     = ${build.classes.dir}/demo
 build.tiny.dir     = ${build.classes.dir}/tiny
+build.test.dir     = ${build.classes.dir}/test
 build.docs.dir     = ${build.dir}/docs
 build.javadocs.dir = ${build.docs.dir}/api
+build.reports.dir  = ${build.dir}/test-reports
 
 build.all.jar      = ${build.dir}/${jar.all.name}.jar
 build.plastic.jar  = ${build.dir}/${jar.plastic.name}.jar
