--- a/default.properties
+++ b/default.properties
@@ -11,7 +11,7 @@ Name=JGoodies Looks
 name=looks
 spec.version=1.3
 impl.version=1.3.1
-dist.version=1_3_1-snapshot-20050324
+dist.version=1_3_1-20050325
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
