Set 'build.compile.source' and 'build.compile.target' to '1.4' in the default.properties; build.xml honors the source setting.

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.19 2005-05-30 12:57:16 karsten Exp $
+   $Id: build.xml,v 1.20 2005-07-08 15:10:32 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -111,6 +111,7 @@
 			deprecation  ="${build.compile.deprecation}"
 			nowarn       ="${build.compile.nowarn}" 
 			optimize     ="${build.compile.optimize}"
+            source       ="${build.compile.source}"
 			target       ="${build.compile.target}"
 			verbose      ="${build.compile.verbose}"
 			bootclasspath="${build.boot.classpath}" />
@@ -139,6 +140,7 @@
 			deprecation  ="${build.compile.deprecation}"
 			nowarn       ="${build.compile.nowarn}" 
 			optimize     ="${build.compile.optimize}"
+            source       ="${build.compile.source}"
 			target       ="${build.compile.target}"
 			verbose      ="${build.compile.verbose}"
 			bootclasspath="${build.boot.classpath}" 
@@ -159,6 +161,7 @@
 			deprecation  ="${build.compile.deprecation}"
 			nowarn       ="${build.compile.nowarn}" 
 			optimize     ="${build.compile.optimize}"
+            source       ="${build.compile.source}"
 			target       ="${build.compile.target}"
 			verbose      ="${build.compile.verbose}"
 			bootclasspath="${build.boot.classpath}" 
@@ -180,6 +183,7 @@
             deprecation  ="${build.compile.deprecation}"
             nowarn       ="${build.compile.nowarn}" 
             optimize     ="${build.compile.optimize}"
+            source       ="${build.compile.source}"
             target       ="${build.compile.target}"
             verbose      ="${build.compile.verbose}"
             bootclasspath="${build.boot.classpath}"
