--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3.1
-dist.version=1_3_1-20050325
+impl.version=1.3.2-snapshot
+dist.version=1_3_2-snapshot-20050708
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -58,7 +58,8 @@ build.compile.debug=on
 build.compile.deprecation=off
 build.compile.fork=no
 build.compile.nowarn=on
-build.compile.target=1.3
+build.compile.source=1.4
+build.compile.target=1.4
 build.encoding=ISO-8859-1
 
 build.dir          = ${top.dir}/build
