--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3.2-snapshot
-dist.version=1_3_2-snapshot-20050912
+impl.version=1.3.2
+dist.version=1_3_2-20050919
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
