Changed build and distribution, adjusted readme and release notes

--- a/default.properties
+++ b/default.properties
@@ -11,7 +11,7 @@ Name=JGoodies Looks
 name=looks
 spec.version=1.4
 impl.version=1.4-alpha
-dist.version=1_4_alpha-snapshot-20051017
+dist.version=1_4_alpha-20051018
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -28,7 +28,7 @@ top.dir=${basedir}
 
 # Source Properties -------------------------------------------
 src.dir          = ${top.dir}/src
-src.share.dir    = ${src.dir}/share
+src.common.dir   = ${src.dir}/common
 src.plastic.dir  = ${src.dir}/plastic
 src.windows.dir  = ${src.dir}/windows
 src.examples.dir = ${src.dir}/examples
@@ -49,7 +49,7 @@ lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 # JavaDoc Properties ------------------------------------------
 javadoc.link=http://java.sun.com/j2se/1.4/docs/api/
 javadoc.packages=com.jgoodies.*
-javadoc.overview=${src.share.dir}/overview.html
+javadoc.overview=${src.common.dir}/overview.html
 
 
 # Build Properties --------------------------------------------
