--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   $Id: build.xml,v 1.20 2005-07-08 15:10:32 karsten Exp $
+   $Id: build.xml,v 1.21 2005-10-18 20:45:13 karsten Exp $
 
    This is a build file for use with the Jakarta Ant build tool, see
    http://jakarta.apache.org/ant/index.html
@@ -101,7 +101,7 @@
 	<target name="compile-main" depends="prepare"
 	        description="Compiles all library sources." >
 		<javac 
-			srcdir       ="${src.share.dir};${src.plastic.dir};${src.windows.dir}"
+			srcdir       ="${src.common.dir};${src.plastic.dir};${src.windows.dir}"
 			destdir      ="${build.main.dir}"
         	encoding     ="${build.encoding}"
         	executable   ="${build.compile.executable}"
@@ -117,7 +117,7 @@
 			bootclasspath="${build.boot.classpath}" />
 
 		<copy toDir="${build.main.dir}" >
-			<fileset dir="${src.share.dir}" 
+			<fileset dir="${src.common.dir}" 
 					 includes="com/jgoodies/looks/common/shadow.png" />
 			<fileset dir="${src.plastic.dir}" 
 					 includes="com/jgoodies/looks/plastic/icons/**/*" />
@@ -199,7 +199,7 @@
             description="Creates the API documentation using JavaDoc." >
 		<mkdir dir="${build.javadocs.dir}"	/>
         <javadoc 
-        	sourcepath="${src.share.dir}:${src.plastic.dir}:${src.windows.dir}"
+        	sourcepath="${src.common.dir}:${src.plastic.dir}:${src.windows.dir}"
             packagenames="${javadoc.packages}"
         	destdir="${build.javadocs.dir}"
         	encoding="${build.encoding}"
@@ -368,7 +368,10 @@
 		<!-- Copy the source directories. -->
 		<copy todir="${dist.src.dir}" >
 		    <fileset dir="${src.dir}" 
-		             includes="examples/**/*, 
+		             includes="common/**/*,
+                               plastic/**/*, 
+                               windows/**/*, 
+                               examples/**/*, 
                                photoshop/*,
                                test/**/*" />
 		</copy>
@@ -387,14 +390,6 @@
 		<copy tofile="${dist.windows.jar}" file="${build.windows.jar}" />
 		// -->
 		
-		<!-- Create a source zip for the libarary jar. -->
-	    <zip 
-	    	destfile="${dist.all.src.zip}">
-			<fileset dir="${src.share.dir}"   />
-			<fileset dir="${src.plastic.dir}" />
-			<fileset dir="${src.windows.dir}" />
-	    </zip>    
-	    
 	</target>
 
     <!-- ***************************************************************** -->
