--- a/default.properties
+++ b/default.properties
@@ -9,9 +9,9 @@
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
 name=looks
-spec.version=1.4
-impl.version=1.4-alpha
-dist.version=1_4_alpha-20051031
+spec.version=2.0
+impl.version=2.0-preview1
+dist.version=2_0_pre1-20051107
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
