First draft for the overhauled Plastic font choice; added font choice policy to the Windows Look&Feel

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0-preview1
-dist.version=2_0_pre1-20051123
+impl.version=2.0-pre1
+dist.version=2_0_preview1-20051204
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
