Refreshed for the snapshot of Jan-26-2006

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0-pre2
-dist.version=2_0_preview2-20060126
+impl.version=2.0-snapshot
+dist.version=2_0_snapshot-20060126
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -38,7 +38,7 @@ descriptors.dir = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.0.5.jar
+lib.forms.name = forms-1.0.6.jar
 lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 
 
