--- a/default.properties
+++ b/default.properties
@@ -74,6 +74,7 @@ build.windows.jar  = ${build.dir}/${jar.windows.name}.jar
 
 build.demo.jar     = ${build.dir}/demo.jar
 build.tiny.jar     = ${build.dir}/tiny.jar
+build.fonttest.jar = ${build.dir}/fonttest.jar
 
 
 # Dist Properties -----------------------------------------------
@@ -96,4 +97,5 @@ dist.windows.jar = ${dist.dir}/${jar.windows.name}-${impl.version}.jar
 
 dist.demo.jar    = ${dist.demo.dir}/demo.jar
 dist.tiny.jar    = ${dist.demo.dir}/tiny.jar
+dist.fonttest.jar= ${dist.dir}/fonttest.jar
 
