Prepared the beta2 build

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0-snapshot
-dist.version=2_0-snapshot-20060218
+impl.version=2.0-beta2
+dist.version=2_0-beta2-20060220
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
