--- a/default.properties
+++ b/default.properties
@@ -11,7 +11,7 @@ Name=JGoodies Looks
 name=looks
 spec.version=2.0
 impl.version=2.0-rc
-dist.version=2_0-rc-20060223
+dist.version=2_0-rc-20060224
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -76,6 +76,9 @@ build.demo.jar     = ${build.dir}/demo.jar
 build.tiny.jar     = ${build.dir}/tiny.jar
 build.fonttest.jar = ${build.dir}/fonttest.jar
 
+build.maven.dir    = ${build.dir}/maven
+build.maven.pom.template = ${top.dir}/conf/maven-pom-template.xml
+
 
 # Dist Properties -----------------------------------------------
 dist.root.dir    = ${top.dir}/dist
@@ -99,3 +102,7 @@ dist.demo.jar    = ${dist.demo.dir}/demo.jar
 dist.tiny.jar    = ${dist.demo.dir}/tiny.jar
 dist.fonttest.jar= ${dist.dir}/fonttest.jar
 
+dist.maven.pom     = ${build.maven.dir}/pom.xml
+dist.maven.bin.jar = ${build.maven.dir}/${dist.name}.jar
+dist.maven.src.jar = ${build.maven.dir}/${dist.name}-sources.jar
+dist.maven.bundle  = ${dist.root.dir}/${dist.name}-bundle.jar
