Set the date for the 2.0 final

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0-rc
-dist.version=2_0-rc-20060224
+impl.version=2.0
+dist.version=2_0-20060303
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
