Updated the docs for the 2.0.1

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0
-dist.version=2_0-20060303
+impl.version=2.0.1
+dist.version=2_0_1-20060309
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
