Prepared for version 2.0.3

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0.2
-dist.version=2_0_2-20060502
+impl.version=2.0.3-snapshot
+dist.version=2_0_3snapshot-20060512
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
