--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0.3-snapshot
-dist.version=2_0_3snapshot-20060512
+impl.version=2.0.3
+dist.version=2_0_3-20060610
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -38,7 +38,7 @@ descriptors.dir = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.0.6.jar
+lib.forms.name = forms-1.0.7.jar
 lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 
 
@@ -97,10 +97,6 @@ dist.all.jar     = ${dist.dir}/${dist.all.name}
 dist.all.src.zip = ${dist.dir}/${jar.all.name}-${impl.version}-src.zip
 dist.plastic.jar = ${dist.dir}/${jar.plastic.name}-${impl.version}.jar
 dist.windows.jar = ${dist.dir}/${jar.windows.name}-${impl.version}.jar
-
-dist.demo.jar    = ${dist.demo.dir}/demo.jar
-dist.tiny.jar    = ${dist.demo.dir}/tiny.jar
-dist.fonttest.jar= ${dist.dir}/fonttest.jar
 
 dist.maven.pom     = ${build.maven.dir}/pom.xml
 dist.maven.bin.jar = ${build.maven.dir}/${dist.name}.jar
