Prepared the 2.1 preview

--- a/default.properties
+++ b/default.properties
@@ -9,9 +9,9 @@
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
 name=looks
-spec.version=2.0
-impl.version=2.0.3
-dist.version=2_0_3-20060610
+spec.version=2.1pre
+impl.version=2.1-preview
+dist.version=2_1_0-preview-20060610
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
