Updated for the 2.1.0 build

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.1
-impl.version=2.1b2
-dist.version=2_1_0-Beta2-20061119
+impl.version=2.1.0
+dist.version=2_1_0-20061123
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
