Prepared the 2.1.3 build

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.1
-impl.version=2.1.2
-dist.version=2_1_2-20070118
+impl.version=2.1.3pre
+dist.version=2_1_3-pre-20070122
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
