Updated Forms to 1.1.0

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.1
-impl.version=2.1.4rc
-dist.version=2_1_4-rc-20070417
+impl.version=2.1.4
+dist.version=2_1_4-20070417
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -38,7 +38,7 @@ descriptors.dir = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.0.7.jar
+lib.forms.name = forms-1.1.0.jar
 lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 
 
