Updated build notes

--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.2
-impl.version=2.2.0b1
-dist.version=2_2_0-beta1-20080716
+impl.version=2.2.0
+dist.version=2_2_0-20080722
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
